--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 /*
 Theme Name: Hello Elementor Child
 Theme URI: http://your-website.com/hello-elementor-child/
-Description: Child theme for Hello Elementor ลูก theme ออกแบบ เพื่อเว็บไซต์ของ www.linearmotorshop.com เท่านั้นทั้งระบบ login และ สร้างการซ้อน ระบบใหนหน้าต่างๆเพื่อความปลอดภัยในเว็บไซต์ ลองรับ vertion WordPress 6.4. +++
+Description: Child theme for Hello Elementor ลูก theme ออกแบบ เพื่อเว็บไซต์อีคอมเมิร์ททั้งระบบ login และ สร้างการซ้อนระบบใหนหน้าต่างๆเพื่อความปลอดภัยในเว็บไซต์ ลองรับ vertion WordPress 6.4. +++
 Author: jirateap charungpan
 Author URI: https://gustabe.com
 Template: hello-elementor
